--- a/webstandard/index.html
+++ b/webstandard/index.html
@@ -50,7 +50,7 @@
                 <!-- position -->
                 <div class="title">
                     <p>Not for the beginning, for the end</p>
-                    <h1><a href="#">frecoding.github.io 확인중입니다.</a></h1>
+                    <h1><a href="#">frecoding.github.io 확인중입니다.ㅁㄴㅇㅁㄴㅇ</a></h1>
                 </div>
                 
                 <!-- icon -->
