원래대로 복원

--- a/webstandard/index.html
+++ b/webstandard/index.html
@@ -49,7 +49,7 @@
                 
                 <!-- position -->
                 <div class="title">
-                    <p>Not for the beginning, for the end 변한것이 없어서 큰일이네요 다시한번 확인하는중</p>
+                    <p>Not for the beginning, for the end</p>
                     <h1><a href="#">frecoding.github.io</a></h1>
                 </div>
                 
