--- a/webstandard/index.html
+++ b/webstandard/index.html
@@ -460,9 +460,23 @@
                     </ul>
                     <address>
                         <em>Copyright &copy;</em>
-                        <a href="https://frecoding.github.io/frecoding/">frecoding.github.io</a>
+                        <a href="https://frecoding.github.io/frecoding/">frecoding.github.io/frecoding</a>
                         <span>All Right Rederved</span>
                     </address>
+                    
+                    <!-- w3c -->
+                    <div class="w3c">
+						<a href="http://jigsaw.w3.org/css-validator/check/referer">
+							<img style="border:0;width:88px;height:31px"
+								src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="올바른 CSS입니다!" />
+						</a>
+						<a href="http://validator.w3.org/check?uri=referer">
+							<img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional"
+								height="31" width="88" />
+						</a>
+					</div>
+                    <!-- //w3c -->
+               
                 </div>
             </div>
         </div>
