--- a/webstandard/index.html
+++ b/webstandard/index.html
@@ -490,11 +490,14 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="js/slick.js"></script>
         <script>
+            //배너
             $('.ban').slick({
+                dots: true,
+                infinite: true,
                 slidesToShow: 3,
                 slidesToScroll: 1,
                 autoplay: true,
-                autoplaySpeed: 2000,
+                autoplaySpeed: 1000
             });
         </script>
         
