--- a/Main.html
+++ b/Main.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>FreCoding | MDN</title>
+    <title>FreCoding</title>
     
     <!-- meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
