--- a/Main.html
+++ b/Main.html
@@ -37,20 +37,20 @@
 <body>
    
     <!-- header -->
-    <hearder id="header">
-        <h1>FreCoding</h1>
-        <ul>
-            <li><a href="#">Tistory</a></li>
-            <li><a href="#">MDN</a></li>
-            <li><a href="#">Design</a></li>
-        </ul>
-    </hearder>
+    <header id="header">
+        <article class="header">
+            <h1>FreCoding</h1>
+            <ul class="project">
+                <li><a href="#">Tistory</a></li>
+                <li><a href="#">MDN</a></li>
+                <li><a href="#">Design</a></li>
+            </ul>
+        </article>
+    </header>
     
     <!-- nav -->
     <nav id="nav">
-        <figure>
-            <img src="#" alt="FreCoding 아이콘">
-        </figure>
+        <p>FreCoding</p>
         <h1>시작이 아닌 끝을 향해서</h1>
         <ul>
             <li><a href="#">twitter</a></li>
