--- a/Main.html
+++ b/Main.html
@@ -27,7 +27,7 @@
 	<link rel="icon" href="assets/ico/favicon-64.png" sizes="64x64">
 	<link rel="icon" href="assets/ico/favicon-128.png" sizes="128x128">
    
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- HTML5 shiv and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.../assets2/js/1.4.2/respond.min.js"></script>
