--- a/responsive/index.html
+++ b/responsive/index.html
@@ -62,7 +62,7 @@
             <!-- title -->
             <div class="title">
                 <p>Professional Web Publisher</p>
-                <h1><a href=""></a></h1>
+                <h1><a href="https://frecoding.github.io/frecoding/responsive/index.html"></a></h1>
             </div>
             <!-- //title -->
         </div>
