--- a/Main.html
+++ b/Main.html
@@ -11,8 +11,8 @@
 	<meta name="keywords" content="프리코딩, 웹 퍼블리셔, 웹 표준, 웹 접근성, 코드정리, frecoding, publisher, css3, html5, markup, design">
     
     <!-- css -->
-    <link rel="stylesheet" href="/asset/css/reset.css">
-    <link rel="stylesheet" href="/asset/css/style.css">
+    <link rel="stylesheet" href="asset/css/reset.css">
+    <link rel="stylesheet" href="asset/css/style.css">
     
     <!-- web font -->
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
