--- a/Main.html
+++ b/Main.html
@@ -28,9 +28,12 @@
 	<link rel="icon" href="assets/ico/favicon-128.png" sizes="128x128">
    
     <!-- HTML5 shiv and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
+    <!--[if lte IE 8]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.../assets2/js/1.4.2/respond.min.js"></script>
+        <sript type="text/javascript">
+            alert("브라우저를 업데이트 또는 크롬으로 실행해주세요.");
+        </sript>
     <![endif]-->
     
 </head>
