--- a/responsive/index.html
+++ b/responsive/index.html
@@ -153,7 +153,7 @@
                         <h4 class="cbox-tit">MENU</h4>
                         <p class="cbox-desc">웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.</p>
                         <!-- menu -->
-                            <ul class="menu">
+                            <ul class="menu clearfix">
                                 <li><a href="#">Cafe<i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
                                 <li><a href="#">HTML5<i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
                                 <li><a href="#">CSS<i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
@@ -164,12 +164,64 @@
                         <!-- //menu -->
                     </article><!-- //column1 -->
                     <article class="cbox column2">
-                        <h4 class="cbox-tit">Title</h4>
+                        <h4 class="cbox-tit">Notice</h4>
                         <p class="cbox-desc">웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.</p>
+                        <!-- notice -->
+                        <div class="notice">
+                            <h5>Grephic Design</h5>
+                            <ul>
+                                <li><a href="#">웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.</a></li>
+                                <li><a href="#">웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.</a></li>
+                                <li><a href="#">웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.</a></li>
+                                <li><a href="#">웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.</a></li>
+                            </ul>
+                            <span class="more"><a href="#">more <i class="fa fa-plus-circle" aria-hidden="true"></i></a></span>
+                        </div>
+                        <!-- //notice -->
+                        <!-- notice -->
+                        <div class="notice mt15">
+                            <h5>Grephic Design</h5>
+                            <ul>
+                                <li><a href="#">웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.</a></li>
+                                <li><a href="#">웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.</a></li>
+                                <li><a href="#">웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.</a></li>
+                                <li><a href="#">웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.</a></li>
+                            </ul>
+                            <span class="more"><a href="#">more <i class="fa fa-plus-circle" aria-hidden="true"></i></a></span>
+                        </div>
+                        <!-- //notice -->
                     </article><!-- //column2 -->
                     <article class="cbox column3">
                         <h4 class="cbox-tit">Title</h4>
                         <p class="cbox-desc">웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.</p>
+                        <!-- blog -->
+                        <div class="blog">
+                            <h5>Figure</h5>
+                            <figure>
+                                <a href="#" class="blog-img">
+                                    <img src="assets/img/blog3_@1.jpg" srcset="assets/img/blog3_@2.jpg 2x, assets/img/blog3_@3.jpg 3x" alt="blog image1">
+                                    <em>Blog</em>
+                                </a>
+                            </figure>
+                            <figcaption>
+                                웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.
+                            </figcaption>
+                        </div>
+                        <!-- //blog -->
+                        <!-- blog2 -->
+                        <div class="blog2 mt15">
+                            <h5>Figure2</h5>
+                            <figure>
+                                <a href="#" class="blog-img2">
+                                    <img src="assets/img/blog4_@1.jpg" srcset="assets/img/blog4_@2.jpg 2x, assets/img/blog4_@3.jpg 3x" alt="blog image2">
+                                    <em>Blog2</em>
+                                </a>
+                            </figure>
+                            <figcaption>
+                                웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.웹 퍼블리싱과 관련된 정보 공유 및 교육 사이트입니다.
+                            </figcaption>
+                        </div>
+                        <!-- //blog2 -->
                     </article><!-- //column3 -->
                 </section>
                 <!-- cont-center -->
